...

    <string name="ACCUEIL_title">Des vols partagés pour des aventures inoubliables</string>
    <string name="ACCUEIL_date">Aujourd\'hui</string>
    <string name="ACCUEIL_number_of_people">1</string>
    <string name="ACCUEIL_start">Depart</string>
    <string name="ACCUEIL_destination">Destination</string>
    <string name="ACCUEIL_search">Rechercher</string>

    /* Recherche */

    <string name="RESEARCH_selectionDepart">Sélectionnez  un lieu de départ</string>
    <string name="RESEARCH_selectionArrivee">"Sélectionnez  un lieu d'arriver"</string>
    <string name="RESEARCH_btn_validate_text">Valider</string>
...
    <string name="departureText">Paris</string>
    <string name="departureLocationDescription">Localisation Départ</string>
    <string name="ratingPilot">★ 2/5</string>
    <string name="contactButton">Contacter</string>
    <string name="photoPlane">Avion Profile</string>
    <string name="namePlane">Cessna 140</string>
    <string name="bookButton">Réserver</string>
    <string name="dateText">Mercredi 17 mai</string>
    <string name="buttonSearching">Rechercher</string>
    <string name="buttonAdding">Publier</string>
    <string name="buttonMyTrip">Mes trajets</string>
    <string name="buttonChatting">Messages</string>
    <string name="buttonProfile">Profile</string>
...
    <string name="bookTrips">Réserver des trajets</string>
    <string name="selectDepart">Sélectionnez un lieu de départ :</string>
    <string name="addContact">Ajouter aux contact</string>

    /* Connexion */

    <string name="connection">Connexion</string>
    <string name="enterId">Renseignez vos identifiants</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="forgotPassword">Mot de passe oublié ?</string>
    <string name="se_connecter">Se connecter 🤙</string>

...
    /* Payment */

    <string name="selectPayment">Choisir un moyen de paiement</string>
    <string name="paypal">Paypal</string>
    <string name="cardPayment">Carte Bancaire</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="trajet_comfirm">Trajet Confirmé</string>
    <string name="addToCalendar">Ajouter au calendrier</string>

    /* Select Aircraft */

    <string name="SELECTAIRCRAFT_title">Sélectionner un appareil</string>
...

    /* Change Picture Profile */

    <string name="CHANGEPICTUREPROFILE_title">Changer la photo de profil</string>
    <string name="CHANGEPICTUREPROFILE_subtitle">Changer la photo de profil</string>
    <string name="CHANGEPICTUREPROFILE_takePicture">Prendre une photo</string>
    <string name="CHANGEPICTUREPROFILE_return">Retour</string>

    /* Fragment GPS */

    <string name="GPSFRAGMENT_button">Position actuelle</string>

    /* Other */
...
    <string name="modify">Modifier</string>
    <string name="returnText">Retour</string>
    <string name="confirmation">Confirmation</string>
    <string name="blablaplane">BlaBlaPlane</string>
    <string name="slogans">Des vols partagés pour des aventures inoubliables</string>
    <string name="mentions_legales">Mentions légales</string>
    <string name="logout">Déconnecter</string>
    <string name="or">- OU -</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
...
