...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.00999999" />

    <EditText
        android:id="@+id/registerEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
...
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPassword">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="45dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/blue_primary"
...
